# operations-dashboard-v2

./: app.py  pyproject.toml
artifacts/: INDEX.md  LOGIC_HANDOFF.md  calculations.md  facts.yaml
calyx-sop-dashboard-v2/: README.md  SETUP_GUIDE.md  __init__.py  app.py  q4_revenue_snapshot.py  requirements.txt
calyx-sop-dashboard-v2/.streamlit/: config.toml
calyx-sop-dashboard-v2/src/: Rev_Ops_Playground.py  __init__.py  all_products_forecast.py  cost_analysis.py  customer_analysis.py  data_loader.py  deliveries_tracking.py  forecasting_models.py  kpi_cards.py  operations_view.py  po_forecast.py  q1_revenue_snapshot.py  q2_revenue_snapshot.py  q4_revenue_snapshot.py  quality_section.py  sales_rep_view.py  scenario_planning.py  sop_data_loader.py  utils.py  yearly_planning_2026.py
calyx-sop-dashboard-v2/tests/: test_dashboard.py
src/: aging_analysis.py  data_loader.py  deliveries_tracking.py  pareto_chart.py  quality_section.py  sop_data_loader.py
tests/: __init__.py
